--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,6 +2,12 @@ name: Manual install
 
 on:
   workflow_dispatch:
+    inputs:
+      run-tests:
+        description: 'should run test '
+        default: false
+        required: false
+        type: boolean    
 
 jobs:
   install:
@@ -23,4 +29,5 @@ jobs:
       run: npm run build      
       
     - name: test
+      if :  ${{ inputs.run-tests }} 
       run: npm test
