--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,7 +2,7 @@ name: Manual install
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened,synchronize]
   workflow_dispatch:
     inputs:
       run-tests:
